<resources>
    <string name="BT_COM_MINI" translatable="false">BT COM MINI</string>
    <string name="DPS" translatable="false">DPS</string>
    <string name="DSS" translatable="false">DSS</string>

    <string name="add" translatable="false">ADD POINT</string>
    <string name="app_name">Axle Load</string>
    <string name="available_devices">Available devices </string>
    <string name="axle">AXLE</string>
    <string name="axle_center">CENTER</string>
    <string name="axle_left">LEFT</string>
    <string name="axle_numbered">AXLE %1$d</string>
    <string name="axle_right">RIGHT</string>
    <string name="axles_count">Choose the axles count</string>
    <string name="axis_config">Конфиг_осей</string>

    <string name="battery">Battery: </string>

    <string name="calibration_table">Calibration Table</string>
    <string name="cancel">Cancel</string>
    <string name="change_langauge">Change language</string>
    <string name="choose_sensor">Choose sensor</string>
    <string name="choose_sensor_type">Chose Sensor Type</string>
    <string name="config_type">Config Type</string>
    <string name="configuration_settings">CONFIGURE AXES</string>
    <string name="configure_sensors">CONFIGURE SENSORS</string>
    <string name="configure_reset">Configure on axle %1$s reset</string>
    <string name="configure_the_settings">Configure The Settings</string>
    <string name="configure_loaded">Load from file</string>
    <string name="connection_failed">Failed to connect to device</string>
    <string name="configuration">Configuration</string>
    <string name="calibration">Сalibration</string>
    <string name="changeable_short">Replaceable</string>
    <string name="current_values">Current values</string>
    <string name="change_the_trailer">Swap trailer</string>

    <string name="delete" translatable="false">DELETE</string>
    <string name="device_mac" translatable="false">MAC: </string>
    <string name="device_name">Device Name</string>
    <string name="device_rssi">RSSI: </string>
    <string name="device_status">Status: </string>
    <string name="device_type">Type: </string>
    <string name="dialog_bluetooth_message">Bluetooth must be enabled to use this app.</string>
    <string name="dialog_bluetooth_title">Enable Bluetooth</string>
    <string name="dialog_gps_message">GPS must be enabled to use this app.</string>
    <string name="dialog_gps_title">Enable GPS</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="disconnect_from">Disconnect from %1$s</string>

    <string name="enter_number_of_axes">Enter number of axes (1 – 7)</string>
    <string name="enter_password">Enter password</string>
    <string name="error_axis_out_of_range">Please enter a number between 1 and 7</string>
    <string name="error_empty_axis_count">Please enter the number of axes</string>
    <string name="error_invalid_number">Please enter a valid number</string>
    <string name="error_select_at_least_one_sensor_per_axis">Select at least one sensor per axis</string>
    <string name="error_sensor_not_selected">Sensor not select</string>
    <string name="error_reading_the_file">Incorrect format or file</string>
    <string name="error_message_period_range">Value must be between 2 and 1800</string>
    <string name="error_measurement_period_range">Value must be between 2 and 1800</string>
    <string name="error_state_number_length">Max 10 characters required</string>
    <string name="error_required">Required</string>
    <string name="error_total_axles_range">Value must be between 1 and 7</string>
    <string name="error_total_sensors_range">Value must be between 1 and 14</string>
    <string name="error_sensors_on_axle_range">Value must be 1 or 2</string>
    <string name="error_installation_point_greater_than_total_axles">Installation point cannot be greater than total axles</string>
    <string name="error_sensor_number_greater_than_total_sensors">Sensor number cannot be greater than total sensors</string>
    <string name="error_total_sensors_greater_than_axles_times_two">The number of sensors cannot exceed %1$s</string>

    <string name="firmware_version">Firmware Version: </string>
    <string name="finish_button">FINISH</string>

    <string name="hardware_version">Hardware Version: </string>

    <string name="installation_point">Installation Point</string>
    <string name="point">Installation Point:</string>
    <string name="invalid_detector">Invalid detector at line %1$d</string>
    <string name="invalid_password_for">Invalid password: %1$s</string>

    <string name="manufacturer">Manufacturer: </string>
    <string name="measurement_period">Measurement period (s)</string>
    <string name="message_delivery_period">Message delivery period (s)</string>
    <string name="model_type">Model type: </string>

    <string name="no">No</string>

    <string name="ok">OK</string>

    <string name="pressure">Pressure: </string>
    <string name="pressure_short">Press: </string>
    <string name="password">Password</string>
    <string name="password_cannot_be_empty">Password can`t be empty</string>
    <string name="password_old">Old password</string>
    <string name="password_new">New password</string>
    <string name="password_reset_for">Password reset: %1$s</string>
    <string name="password_set_for">Password is set: %1$s</string>

    <string name="read_from_file">READ FROM FILE</string>
    <string name="read_from_sensor">READ FROM SENSOR</string>
    <string name="reset">Reset</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_devices">Resetting devices</string>
    <string name="reset_all_devices_on_the_axis">Are you sure you want to reset all devices on the axis %1$s ?</string>

    <string name="save_button">SAVE TO SENSOR</string>
    <string name="save_configuration">Configuration sent</string>
    <string name="save_to_file">SAVE TO FILE</string>
    <string name="selected">Selected %1$s</string>
    <string name="sensor_list">Sensors list</string>
    <string name="serial_number">Serial Number: </string>
    <string name="set_new_password">SET NEW PASSWORD</string>
    <string name="stateNumber">State Number:</string>
    <string name="save_to_file_not_allowed_at">Saving is not supported on this version of Android</string>
    <string name="saved_in">Saved in: %1$s</string>


    <string name="weight">Weight: </string>
    <string name="wheel_center">Center of axle %1$d</string>
    <string name="wheel_left">Left wheel of axle %1$d</string>
    <string name="wheel_right">Right wheel of axle %1$d</string>

    <string name="yes">Yes</string>

    <string name="total_axles">Total number of axes</string>
    <string name="total_sensors">Total number of sensors</string>
    <string name="trailer_changeable">The chassis is replaceable</string>
    <string name="tar_table">Tar table %1$s</string>
    <string name="truck">Truck</string>
    <string name="truck_with_trailer">Truck with trailer</string>
    <string name="truck_state_number">Truck registration plate</string>
    <string name="trailer_state_number">Trailer registration plate</string>
    <string name="total_weight">Total weight</string>
    <string name="the_configuration_has_been_read">The configuration has been read</string>
    <string name="total_axis">Total axis</string>
    <string name="total_sensors_in">Total sensors</string>

    <string name="number_of_sensors_per_axis">Number of sensors per axis</string>

    <string name="kg" translatable="false">KG</string>
    <string name="zero" translatable="false">0</string>
    <string name="_0_99999" translatable="false">0–99999</string>
    <string name="_0_000_99_999" translatable="false">0.000 – 99.999</string>
    <string name="S_N" translatable="false">S/N:</string>
    <string name="connect">connect</string>
    <string name="select_sensor_type">Select sensor type</string>
    <string name="one" translatable="false">1</string>
    <string name="search">Search</string>
</resources>
