<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:layout_marginHorizontal="16dp"
    app:cardBackgroundColor="@color/btn_background"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="16dp">

        <!-- Заголовок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/axisTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/axle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                 />

            <TextView
                android:id="@+id/axisTitleRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginStart="12dp" />
        </LinearLayout>

        <!-- Иконки осей -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:weightSum="3">

            <ImageView
                android:id="@+id/axleSensorLeft"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:contentDescription="@string/axle_left"
                android:src="@drawable/ic_left"
                android:padding="8dp" />

            <ImageView
                android:id="@+id/axleSensorCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/axle_center"
                android:src="@drawable/ic_center"
                />

            <ImageView
                android:id="@+id/axleSensorRight"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:contentDescription="@string/axle_right"
                android:src="@drawable/ic_right"
                android:padding="8dp" />
        </LinearLayout>

        <!-- Кнопка Reset -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/resetCardView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:cardBackgroundColor="@color/alert_color"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
