<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="26dp">

        <ImageView
            android:id="@+id/signalPicture"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/device_mac"
            android:src="@drawable/ic_signal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signalValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/signalPicture"
            app:layout_constraintTop_toTopOf="@id/signalPicture" />

        <ImageView
            android:id="@+id/batteryIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="54dp"
            android:contentDescription="@string/battery"
            android:src="@drawable/ic_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/batteryLevelValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/green_btn"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/batteryIcon"
            app:layout_constraintTop_toTopOf="@id/batteryIcon" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#E0E0E0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signalPicture" />

        <!-- Второй контейнер (тип датчика, серийный, меню) -->

        <ImageButton
            android:id="@+id/overflowButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/finish_button"
            android:src="@drawable/dots"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/deviceTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/device_type"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/deviceTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/deviceTypeLabel"
            app:layout_constraintTop_toTopOf="@id/deviceTypeLabel" />

        <TextView
            android:id="@+id/deviceSerialLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/S_N"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceTypeLabel" />

        <TextView
            android:id="@+id/deviceSerialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/deviceSerialLabel"
            app:layout_constraintTop_toTopOf="@id/deviceSerialLabel" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#E0E0E0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceSerialTextView" />

        <!-- Третий контейнер (MAC, версия ПО, версия HW, вес, давление, сохранить) -->

        <TextView
            android:id="@+id/deviceMac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/device_mac"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <TextView
            android:id="@+id/deviceMacTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/deviceMac"
            app:layout_constraintTop_toTopOf="@id/deviceMac" />

        <TextView
            android:id="@+id/firmwareVersionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/firmware_version"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceMac" />

        <TextView
            android:id="@+id/firmwareVersionValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/firmwareVersionTextView"
            app:layout_constraintTop_toTopOf="@id/firmwareVersionTextView" />

        <TextView
            android:id="@+id/hardwareVersionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hardware_version"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firmwareVersionTextView" />

        <TextView
            android:id="@+id/hardwareVersionValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/hardwareVersionTextView"
            app:layout_constraintTop_toTopOf="@id/hardwareVersionTextView" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/weight"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hardwareVersionTextView" />

        <TextView
            android:id="@+id/weightValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/weightTextView"
            app:layout_constraintTop_toTopOf="@id/weightTextView" />

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pressure"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weightTextView" />

        <TextView
            android:id="@+id/pressureValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/pressureTextView"
            app:layout_constraintTop_toTopOf="@id/pressureTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green_btn"
            android:text="@string/save_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_save_to"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="24dp"
            app:layout_constraintTop_toBottomOf="@id/pressureTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
